--- a/Trabalho/index.html
+++ b/Trabalho/index.html
@@ -1,1 +1,36 @@
 <!--Comentarios-->
+<!--
+---No HTML
+
+Adicionei links nas duas primeiras camisas, que se chamam "Especificações", e coloquei uma classe em cada link!.
+coloquei dentro de uma <div> e adicionei um id pra cada <div>.
+Eu adiconei a TAG <dialog> nas duas primeiras camisas, e em cada um dos <dialog> adicionei um Id.
+
+Abri uma <div> e coloquei um <a href> "x", com intuito de fechar o modal, 
+dentro dela adicionei a classe já criada anteriormente nos links.
+
+Adicionei uma imagem dentro do modal e adicionei um Id nela.
+Adicionei um titulo dentro do modal com os nomes dos times e com uma classe chamada "titulo_modal".
+Adicionei um Paragráfo em negrito com as especificações das camisas.
+Adicionei uma cor branca na fonte do paragrafo.
+
+Fechei as TAGS <dialog>!!!
+
+
+---No <Script>
+
+Declarei duas variaveis, uma chamada modal, e outra btnModal dando um getElement com Id e class..
+Fiz isso nas duas camisas!! Só mudei o nome das variaveis para modal2 e btnModal2!.
+Após isso abri duas funções, uma para abrir o modal e outra para fechar!.
+Após isso fiz uma mudança mesclando Css com JS, nesse caso era uma função que ao clicar para abrir o modal
+o Usuário não conseguisse rolar a página!!.
+
+Logo abaixo fiz um <script> com o intuito de deixar todos os <h1> com cor "black".
+Declarei duas variaveis, uma chamada const h e outra chamada const titulos!.
+Abri um forEach para que a cada <h1> que ele achasse tranformasse a cor em "black".
+
+---No CSS
+
+Peguei todas as classes e Id's que eu adicionei no HTML e modifiquei de acordo com o desejado!
+
+-->
