--- a/Trabalho/index.html
+++ b/Trabalho/index.html
@@ -13,6 +13,7 @@ Adicionei uma imagem dentro do modal e adicionei um Id nela.
 Adicionei um titulo dentro do modal com os nomes dos times e com uma classe chamada "titulo_modal".
 Adicionei um Paragráfo em negrito com as especificações das camisas.
 Adicionei uma cor branca na fonte do paragrafo.
+Removi varias camisetas que eram desnecessárias na Pag.
 
 Fechei as TAGS <dialog>!!!
 
@@ -29,8 +30,16 @@ Logo abaixo fiz um <script> com o intuito de deixar todos os <h1> com cor "black
 Declarei duas variaveis, uma chamada const h e outra chamada const titulos!.
 Abri um forEach para que a cada <h1> que ele achasse tranformasse a cor em "black".
 
+
+
 ---No CSS
 
 Peguei todas as classes e Id's que eu adicionei no HTML e modifiquei de acordo com o desejado!
-
+Adicionei uma imagem de fundo.
+Adicionei um banner.
+Adicionei uma animação ao passar o mouse nas imagens, elas crescem.
+Adicionei um degradê ao passar o mouse por cima dos links.
+Mudei as cores das Div's e do menu.
+Adicionei um simbolo do Whatsapp, e posicionei no canto da tela, 
+e fiz que ele ficasse por cima de qualquer elemento.
 -->
